# rust-filen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: auth.rs  auth_v1.rs  crypto.rs  errors.rs  file_chunk_pos.rs  filen_settings.rs  lib.rs  limited_exponential.rs  queries.rs  retry_settings.rs  settings.rs  test_utils.rs  utils.rs
src/filen/: crypto.rs  mod.rs  requests.rs
src/v1/: auth.rs  client.rs  dir_links.rs  dirs.rs  download.rs  download_dir.rs  download_file.rs  events.rs  file_links.rs  files.rs  fs.rs  keys.rs  links.rs  mod.rs  share.rs  sync_dir.rs  upload_file.rs  usage.rs  user.rs  user_keys.rs  versions.rs
tests/resources/: auth_info_v1_response.json  filen_public_key.txt  folder_link_status_response.json  get_dir_same_response.json  invalid_auth_version_response.json  login_successful_response.json  private_key.txt  sub_folder_create_response.json  trash_file_already_in_trash_response.json  trash_file_response.json
tests/resources/responses/: archive_file.json  auth_info_v2.json  current_versions.json  dir_content.json  dir_content_trash.json  dir_create.json  dir_exists.json  dir_link_status_no_link.json  dir_link_status_no_password.json  dir_move.json  dir_rename.json  download_dir.json  download_dir_link.json  download_dir_shared.json  file_archive_restore.json  file_exists_existing.json  file_versions.json  get_dir_changed_data.json  link_dir_status.json  link_status_disabled.json  link_status_enabled_no_password.json  link_status_enabled_with_password.json  share_dir_status_not_shared.json  too_many_requests.json  trash_folder.json  upload.json  upload_done.json  user_dirs_default.json  user_events.json  user_events_get.json  user_get_account.json  user_get_settings.json  user_info.json  user_keyPair_info.json  user_masterKeys.json  user_public_key_get.json  user_recent.json  user_settings_2fa_disable.json  user_settings_2fa_enable.json  user_settings_password_change.json  (+5 more)
