[package]
name = "rust_filen"
version = "0.1.0"
authors = ["Konstantin Zakharov <enough.tea@outlook.com>"]
license = "MIT"
description = "Rust interface for Filen.io API"
keywords = ["filen.io", "api"]
edition = "2018"

[features]
default = ["ureq"]
async = ["fure", "reqwest"]

[dependencies]
aes = "0.7"
aes-gcm = { version = "0.9", features =["std"] }
base64 = "0.13"
block-modes = "0.8"
easy-hasher = "2.2"
evpkdf = "0.1"
fure = { version = "0.5", optional = true }
futures = "0.3"
hmac = "0.11"
once_cell = "1.8"
md-5 = "0.9"
mime_guess ="2.0"
pbkdf2  = "0.9"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
retry = "1.3"
rsa = "0.5"
secstr = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.10"
sha2 = "0.9.8"
snafu = "0.6"
ureq = { version = "2.3", features = ["json"], optional = true }
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
camino = "1.0"
cargo-husky = "1.5"
httpmock = "0.6"
image = "0.23"
pretty_assertions = "1.0"
tokio = { version = "1.12", features = ["full"] }
tokio-test = "0.4"