[package]
name = "rust_filen"
version = "0.3.0"
authors = ["Konstantin Zakharov <enough.tea@outlook.com>"]
license = "MIT"
description = "Rust interface for Filen.io API"
homepage = "https://github.com/EnoughTea/rust-filen"
repository = "https://github.com/EnoughTea/rust-filen"
readme = "README.md"
keywords = ["api", "filen"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2021"

[features]
default = ["ureq"]
async = ["fure", "reqwest"]

[dependencies]
aes = "0.8"
aes-gcm = { version = "0.9", features  =["std"] }
base64 = "0.13"
cbc = { version = "0.1", features = ["std"] }
easy-hasher = "2.2"
evpkdf = "0.1"
fure = { version = "0.6", optional = true }
futures = "0.3"
hmac = "0.12"
once_cell = "1.8"
md-5 = "0.9"
mime_guess ="2.0"
pbkdf2  = "0.11"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
retry = "1.3"
rsa = "0.6"
secstr = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.11"
sha2 = "0.10"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
ureq = { version = "2.3", features = ["json"], optional = true }
url = "2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }

[dev-dependencies]
camino = "1.0"
cargo-husky = "1.5"
httpmock = "0.6"
image = "0.24"
pretty_assertions = "1.0"
tokio = { version = "1.13", features = ["full"] }
tokio-test = "0.4"